<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.fullsail.aboynton.boyntonallen_ce05.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <EditText android:id="@+id/userInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_string"/>

        <Button android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_button"
            android:layout_marginTop="0dp"
            android:textStyle="normal|bold"
            android:backgroundTint="@android:color/darker_gray" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/average_label"
                android:labelFor="@+id/average_output"/>

            <TextView android:id="@+id/average_output"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/border_style"
                android:layout_marginRight="2dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:padding="0dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/median_label"
                android:labelFor="@+id/median_output"
                android:paddingLeft="10dp"/>

            <TextView android:id="@+id/median_output"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginTop="2dp"
                android:background="@drawable/border_style"
                android:layout_marginRight="2dp" />
        </LinearLayout>

        <Button android:id="@+id/view_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/view_button"
            android:textStyle="normal|bold"
            android:backgroundTint="@android:color/darker_gray" />

        <NumberPicker android:id="@+id/number_picker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="@color/silver"
            android:scrollbarSize="22dp">

        </NumberPicker>

    </LinearLayout>
</RelativeLayout>
